# learning-rust-from-zero

./: .gitignore  README.md  book.toml  index.html  rust_book.html
.github/workflows/: build-print.yml  deploy.yml
chapter1/: 17_practice.md
chapter5/: 23_deref.md
chapter8/: 05_rc_multithread.md  06_arc.md  07_atomic.md  08_mutex.md  09_rwlock.md  10_poisoning.md  11_mpsc.md  12_deadlock.md  13_thread_scope.md
chapter9/: 01_dyn_trait.md  02_dyn_compatibility.md  05_const_generics.md  07_operator_overload.md  12_macro_rules.md  13_proc_macro.md  14_unsafe.md  16_lazy_lock.md  17_extern.md  19_never_type.md
print/: README.md  build.sh  header.tex  metadata.yaml
scripts/: mdbook_to_pandoc.py
src/: EXERCISES.md  GUIDE.md  SUMMARY.md  foreword.md
src/appendix1/: b_short_circuit.md  c_break_return_value.md  e_format_strings.md  f_items_in_main.md  f_struct_update_syntax.md  g_struct_update_syntax.md  h_ref_pattern_match_ergonomics.md  i_panic_todo_unimplemented_unreachable.md  j_let_chains.md  k_dst_intro.md  k_rc_cycle_weak.md  l_fully_qualified_syntax.md
src/chapter1/: 01_install_rust.md  02_first_program.md  05_arithmetic_operators.md  08_if.md  09_scope.md  10_else.md  11_else_if.md  13_let_mut.md  15_stdin.md  16_parse.md  17_practice.md  18_loop_break.md  19_while.md  20_for_range.md  21_nested_loops.md  22_continue.md  24_number_types.md  25_char.md  27_if_expression.md
src/chapter10/: 01_dyn_trait.md  02_dyn_compatibility.md  03_const_fn.md  08_as.md  (+14 more)
zh-tw/: book.toml  outline.md
zh-tw/test-deps/: Cargo.toml
zh-tw/test-deps/src/: lib.rs
(+201 files in other folders)
